# moonbot_isaacsim

./: .gitignore  README.md  mingling.txt
nero_vr_control/: README.md  README.zh-CN.md  pyproject.toml  requirements.txt
nero_vr_control/configs/: nero_dual_agx.yml  nero_single_right_controller.yml
nero_vr_control/logs/: teleop_single_right_isaac_sync.pid
nero_vr_control/scripts/: bootstrap_pi05_remote.sh  build_xrobotoolkit_sdk.sh  check_can_ready.sh  configure_pip_mirror.sh  download_pc_service_deb.sh  finish_root_setup.sh  install_headset_apk.sh  install_quest_apk.sh  install_runtime_minimal.sh  install_system_deps.sh  preview_realsense_mjpeg.py  quest_keep_awake.sh  run_dataset_capture.sh  run_pc_service.sh  run_teleop.sh  run_teleop.sh.bak.20260710172902  run_teleop.sh.fixbak.20260710173145  run_teleop_pico.sh  run_teleop_quest.sh  setup_can.sh  smoke_test.sh  start_pc_service_background.sh  start_single_right_teleop.sh  start_single_right_teleop_isaac_sync.sh  start_single_right_teleop_isaac_sync.sh.bak_20260711_141128  status.sh
nero_vr_control/scripts_archive_20260711_025428/: bootstrap_python.sh  check_deps.sh  disable_arms.sh  download_headset_apk.sh  download_quest_apk.sh  enable_can_push_check.sh  enable_status.sh  fetch_pi05_checkpoint.sh  generate_dual_nero_urdf.py  hardware_check.sh  install_pc_service_deb.sh  remote_pi05_train.sh  run_pi05_local_smoke.sh  setup_third_party.sh  start_hold_enabled.sh  stop_hold_enabled.sh  sync_pi05_dataset_to_remote.sh
nero_vr_control/tests/: test_config.py  test_dataset_capture.py  test_kinematics.py  (+2 more)
(+45 files in other folders)
